--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
-
 {
   "name": "spear-proxy",
   "version": "1.0.0",
+  "description": "Proxy para YouTube del launcher",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "express": "latest",
-    "cors": "latest",
-    "node-fetch": "latest"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
